tests/rustdoc-ui/synthetic-auto-trait-impls/unconstrained-param-in-impl-ambiguity.stderr
error[E0207]: the type parameter `Q` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-param-in-impl-ambiguity.rs:7:13
   |
LL | unsafe impl<Q: Trait> Send for Inner {}
   |             ^ unconstrained type parameter
   |
   = note: to constrain `Q`, use it in the implemented trait, in the self type, or in an equality with an associated type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
